--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -21,7 +21,7 @@
 
                                     </span>
                                 </div>
-                                <input type="text" class="form-control addInput" name="value" placeholder="What needs to be done?" aria-label="What needs to be done?" aria-describedby="basic-addon2">
+                                <input type="text" class="form-control addInput" required name="value" placeholder="What needs to be done?" aria-label="What needs to be done?" aria-describedby="basic-addon2">
                                 <div class="input-group-append">
                                     <span class="input-group-text" id="basic-addon2">
                                         <input list="categorieListe" type="text" required name="categorie" id="categorie">
@@ -94,6 +94,9 @@
             color: #fff!important;
             background-color: #007bff!important;
             border-color: #007bff!important;
+        }
+        .list-group{
+            box-shadow: 0 5px 10px -5px #CCC;
         }
     </style>
 {% endblock %}
