--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -3,24 +3,14 @@
 {% block body %}
     <div class="container">
         <div class="row">
-            <div class="col align-self-start todoist">
+            <div class="col-md-2"></div>
+            <div class="col-md-6 todoist">
 
-                <h2> Todoist </h2>
+                <h1> Todoist </h1>
                 <div class="list-group">
-
                     <div class="list-group-item list-group-item-action input">
                         <form>
                             <div class="input-group mb-3">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">
-                                        <select class="custom-select filiter">
-                                            <option>All</option>
-                                            <option>Complete</option>
-                                            <option>Not Complete</option>
-                                        </select>
-
-                                    </span>
-                                </div>
                                 <input type="text" class="form-control addInput" required name="value" placeholder="What needs to be done?" aria-label="What needs to be done?" aria-describedby="basic-addon2">
                                 <div class="input-group-append">
                                     <span class="input-group-text" id="basic-addon2">
@@ -32,7 +22,7 @@
                                                 <option value="{{ el }}">{{ el }}</option>
                                             {% endfor %}
                                         </datalist>
-                                        <button>Save</button>
+                                        <button class="hide">Save</button>
                                     </span>
                                 </div>
                             </div>
@@ -40,48 +30,109 @@
                     </div>
                     {% for el in data %}
                         <button type="button" data-id="{{ el.id }}" data-category="{{ el.categorie }}" data-status="{{ el.isCompleted }}" class="list-group-item list-group-item-action todoList">
-                            <div class="p" style="float: left;">{{ el.value }}</div>
-                            <span class="badge btn badge-success save hide badge-pill" style="float: right;">
-                                save
-                            </span>
-                            <span class="badge btn badge-info badge-pill edit action" style="float: right;">
-                                Edit
-                            </span>
-                            <span class="badge btn badge-warning badge-pill remove action" style="float: right;">
-                                Delete
-                            </span>
                             {% if (el.isCompleted == 0 ) %}
-                                <span class="badge btn badge-success notbtn badge-pill action" style="float: right;">
+                            <span class="btn notbtn  action" style="float: left;padding: 0 10px;height: 0">
                             {% else %}
-                                <span class="badge btn badge-success  badge-pill action" style="float: right;">
+                                <span class="btn action" style="float: left; padding: 0 10px;height: 0;">
                             {% endif %}
-
-                           {% if (el.isCompleted == 0 ) %}
-                                    not complete
-                                    {% else %}
-                                    complete
-                                {% endif %}
+                                    <i class="material-icons">
+                                        {% if (el.isCompleted == 0 ) %}
+                                            highlight_off
+                                        {% else %}
+                                            check_circle_outline
+                                        {% endif %}
+                                    </i>
                             </span>
+                            <div class="p" style="float: left;">{{ el.value }}</div>
+                            <div class="tool">
+                                <span class="save hide btn" style="float: right;padding: 0 10px;">
+                                <i class="material-icons">save</i>
+                            </span>
+                                <span class="btn edit action" style="float: right;padding: 0 10px;">
+                                <i class="material-icons">create</i>
+                            </span>
+                                <span class="btn remove action" style="float: right;padding: 0 10px;">
+                                <i class="material-icons">clear</i>
+                            </span>
+
+
+                            </div>
                         </button>
                     {% endfor %}
+                    <div class="list-group-item list-group-item-action footer text-center">
+                        <div class="btn-group count" role="group" aria-label="Basic example" style="float: left;">
+                            <p style="height:  0;padding:  10px;">
+                                {{ data|length }} elements
+                            </p>
+                        </div>
+
+                        <div class="btn-group" role="group" aria-label="Basic example">
+                            <button type="button" class="filiter btn btn-default" data="default" >Tout</button>
+                            <button type="button" class="filiter btn btn-default" data="1">Active</button>
+                            <button type="button" class="filiter btn btn-default" data="0">Archiver</button>
+                        </div>
+                        <div class="btn-group" role="group" aria-label="Basic example" style="float: right;">
+                            <button type="button" class="clear btn btn-default" data="-1">Clear</button>
+                        </div>
+
+                    </div>
 
                 </div>
             </div>
+            <div class="col-md-4"></div>
+
         </div>
     </div>
 {% endblock %}
 
 {% block stylesheets %}
     <style>
+        .tool{
+            transition: all .5s;
+            display: none;
+            position: absolute;
+            margin: 0;
+            right: 0;
+        }
+        .list-group-item:hover .tool{
+            display: block;
+        }
+        body{
+            font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+            line-height: 1.4em;
+            background: #f5f5f5 !important;
+            color: #4d4d4d !important;
+            margin: 0 auto;
+            -webkit-font-smoothing: antialiased;
+            -moz-font-smoothing: antialiased;
+            font-smoothing: antialiased;
+            font-weight: 300;
+        }
+        .todoist h1 {
+            width: 100%;
+            font-size: 100px;
+            font-weight: 100;
+            text-align: center;
+            color: rgba(175, 47, 47, 0.15);
+            -webkit-text-rendering: optimizeLegibility;
+            -moz-text-rendering: optimizeLegibility;
+            text-rendering: optimizeLegibility;
+        }
         .hide{
             display: none !important;
         }
         *{
             border-radius: 0!important;
         }
+        .todoist .footer{
+            padding: 0 !important;
+            height: auto !important;
+
+        }
         .todoist .input{
             padding: 0 !important;
-            height: 55px;
+            height: 46px;
+
         }
         .todoist h2{
             text-align: center;
@@ -89,11 +140,14 @@
         .todoist{
             margin: 100px;
         }
-        .list-group-item:not(.input):hover {
+        .list-group-item:not(.input, .footer):hover {
             z-index: 2;
             color: #fff!important;
             background-color: #007bff!important;
             border-color: #007bff!important;
+        }
+        button.filiter.btn.btn-default, .clear {
+            background: transparent;
         }
         .list-group{
             box-shadow: 0 5px 10px -5px #CCC;
